feat:navbar color & add country 'know more' button

--- a/public/profile.html
+++ b/public/profile.html
@@ -30,7 +30,14 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
+               <div id="nav-icon2">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                </div>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                <ul class="navbar-nav menu-navbar-nav options text-center">
@@ -48,6 +55,7 @@
    </div>
    <div class="container-fluid first-page p-0 unable">
       <div id="country-cards" class="container-fluid section-1 bg-white mt-5 p-5">
+         <div id="container"><h1 class="text-center">Favourites</h1><hr/></div>
          <div class="row justify-content-center cards text-center">
 
          </div>
@@ -61,8 +69,8 @@
                   </a>
                </li>
                
-               <li class="page-item" id="next">
-                  <a class="page-link" href="#c_cards" aria-label="Next">
+               <li class="page-item " id="next">
+                  <a class="page-link " href="#c_cards" aria-label="Next">
                      <span aria-hidden="true">&raquo;</span>
                   </a>
                </li>
