--- a/public/index.html
+++ b/public/index.html
@@ -68,21 +68,26 @@
 
          </div>
       </div>
-      <div class="container text-center mt-2">
+      <div class="container text-center my-3">
          <nav id="c_cards" class="d-inline-block" aria-label="Page navigation example">
-            <ul class="pagination">
+            <!-- <ul class="pagination">
                <li class="page-item" id="prev">
-                  <a class="page-link" href="#c_cards" aria-label="Previous">
+                  <a class="page-link" aria-label="Previous">
                      <span aria-hidden="true">&laquo;</span>
                   </a>
                </li>
                
                <li class="page-item" id="next">
-                  <a class="page-link" href="#c_cards" aria-label="Next">
+                  <a class="page-link " aria-label="Next">
                      <span aria-hidden="true">&raquo;</span>
                   </a>
                </li>
-            </ul>
+            </ul> -->
+            <div class="btn-group" role="group" aria-label="Basic example">
+               <button type="button" id="prev" class="btn rounded-pill px-3 btn-wheat"><i class="fas fa-chevron-left"></i></button>
+               
+               <button type="button" id="next" class="btn rounded-pill px-3 btn-wheat"><i class="fas fa-chevron-right"></i></button>
+            </div>
          </nav>
       </div>
    </div>
