--- a/public/index.html
+++ b/public/index.html
@@ -64,29 +64,17 @@
       </div>
 
       <div id="country-cards" class="container-fluid section-1 bg-white mt-5 p-5">
+         <div class="row" id=""><h1 class="pt-5 font-roboto font-bold text-center">Countries</h1><hr/></div>
          <div class="row justify-content-around cards text-center">
 
          </div>
       </div>
       <div class="container text-center my-3">
          <nav id="c_cards" class="d-inline-block" aria-label="Page navigation example">
-            <!-- <ul class="pagination">
-               <li class="page-item" id="prev">
-                  <a class="page-link" aria-label="Previous">
-                     <span aria-hidden="true">&laquo;</span>
-                  </a>
-               </li>
-               
-               <li class="page-item" id="next">
-                  <a class="page-link " aria-label="Next">
-                     <span aria-hidden="true">&raquo;</span>
-                  </a>
-               </li>
-            </ul> -->
             <div class="btn-group" role="group" aria-label="Basic example">
-               <button type="button" id="prev" class="btn rounded-pill px-3 btn-wheat"><i class="fas fa-chevron-left"></i></button>
+               <button type="button" id="prevPage" class="btn rounded-pill px-3 btn-wheat"><i class="fas fa-chevron-left"></i></button>
                
-               <button type="button" id="next" class="btn rounded-pill px-3 btn-wheat"><i class="fas fa-chevron-right"></i></button>
+               <button type="button" id="nextPage" class="btn rounded-pill px-3 btn-wheat"><i class="fas fa-chevron-right"></i></button>
             </div>
          </nav>
       </div>
@@ -100,9 +88,8 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
       crossorigin="anonymous"></script>
+      <script src="./js/user.js"></script>
    <script src="./js/script.js"></script>
-   <script src="./js/user.js"></script>
-   <script src="./js/user-assets.js"></script>
 </body>
 
 </html>
