--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,7 @@
       all copyrights reserved 
    </p>
    <div class="modal-area"></div>
+   <button class="btn go-up-arrow rounded-pill text-center invisible"><i class="fas fa-chevron-up"></i></button>
    <script src="./js/loadModals.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
