--- a/public/profile.html
+++ b/public/profile.html
@@ -56,7 +56,7 @@
    </div>
    <div class="container-fluid first-page p-0 unable">
       <div id="country-cards" class="container-fluid section-1 bg-white mt-5 p-5">
-         <div class="row my-3"><a class="link font-roboto font-bold text-decoration-none" href="/"><i class="fas fa-chevron-left"></i> Back to countries</a></div>
+         <div class="my-3"><a class="link back-to-countries d-inline-block font-roboto font-bold anchor-link text-decoration-none" href="/"><i class="fas fa-chevron-left"></i> Back to countries</a></div>
          <div class="container">
             <div id="row"><h1 class="font-roboto font-bold text-center">Favourites</h1><hr/></div>
          </div>
@@ -79,6 +79,7 @@
       all copyrights reserved 
    </p>
    <div class="modal-area"></div>
+   <button class="btn go-up-arrow rounded-pill text-center p-5"><i class="fas fa-chevron-up"></i></button>
    <script src="./js/loadModals.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
